hphp/hack/test/typecheck/needs_concrete/needs_concrete_in_final_class_1.php
<?hh

final class Finale {
  <<__NeedsConcrete>>
  public static function m1(): void {
  }
}
